# nyota-irc

./: LICENSE  README.md  stack-ghcjs.yaml  stack.yaml
nyota-backend/: nyota-backend.cabal
nyota-web/: nyota-web.cabal
